--- a/todo.css
+++ b/todo.css
@@ -2,29 +2,37 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
-main{
+.main{
     display: flex;
+    flex-wrap: wrap;
+    min-height: 100vh;
+    justify-content: space-evenly;
+    align-items:center;
 }
 
+
+
 .undraw{
-    display: flex;
-    position: absolute;
-    bottom: 9.5rem;
-    right: 50rem;
+   flex:1 1 25rem;
+   margin-left: 9rem;
+   margin-bottom: 7rem;
+
 }
 section{
-    position: absolute;
-    left: 30rem;
-    top: 2.9rem;
+    flex:1 1 25rem;
+    margin-bottom: 26rem;
+    margin-right: 10rem;
+
 }
 span{
     color: #84fc84;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight:bolder;
 }
 img{
-    width:25rem;
+    width: 90%;
 }
 
 
@@ -42,11 +50,19 @@ font-family:  'Poppins', sans-serif;
 
 header{
     font-size: 1.19rem;
+    display: flex;
+    justify-content: center;
 
 }
+h1{
+    margin-top:0.5rem;
+    min-height:1rem;
+    margin-bottom:2rem;
+}
 
-header, form{
-    min-height: 20vh;
+
+form{
+    /* min-height: 20vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,7 +98,7 @@ color: #fff;
 }
 
 .todo-list{
-min-width: 30%;
+min-width: 50%;
 list-style: none;
 }
 
@@ -174,80 +190,32 @@ select{
     color: #ab12fe;
 
 }
-pre{
-    display: flex;
-}
 
-@media (min-width:330px) and (max-width: 1024px){
 
-body{
-background-image:linear-gradient(120deg, rgb(171 18 254)0%, rgb(244 3 255)80%);
 
-}
+/* media query */
+@media(min-width:400px) and (max-width:1024px){
 
-section{
-    position: absolute;
-    left: 7.5rem;
-    top: 9.5rem;
+
+    html{
+        font-size: 67%;
+    }
+
+    header{
+        margin-bottom: 3rem;
+    }
+
+    section{
+        width: 80%;
+        margin: 0rem auto 21rem auto;
+
+    }
+      img{
+        width: 75%;
     
+      }
 }
 
-.undraw{
-    display: flex;
-    position: absolute;
-    bottom: 6.8rem;
-    right: 11.9rem;
-}
-img{
-    width:8.2rem;
-}
-form input, form button{
-    padding: 0.28rem;
-    font-size: 1.18rem;
-    border:none;
-    background: white;
-    
-
-}
-input{
-    width: 5.6rem;
-}
-.todo{
-font-size: 0.7rem;
-
-
-}
-.todo-list{
-
-}
-
-
-
-
-
-.filter-todo{
-width: 4rem;
-padding: 0.3rem;
-}
-
-header, h1{
-    display: flex;
-    text-align: center;
-    min-width: 100%;
-    position: absolute;
-    bottom: 6rem;
-    right: 1.87rem;
-    font-size: 1.5rem;
-
-}
-span{
-    font-size: 1.6rem;
-}
-
-
-
-
-}
 
 
 
